meegotouchhome (0.23.18~1) unstable; urgency=low

  * [UNRELEASED]

 -- Juha Juutinen <juha.juutinen@ixonos.com>  Thu, 24 Mar 2011 14:59:14 +0200

meegotouchhome (0.23.17-1) unstable; urgency=low

  * Changes: Bug 237958 - Tapping on broken installation icon on launcher does not do anything after failed upgrade attempt

 -- Juha Juutinen <juha.juutinen@ixonos.com>  Thu, 24 Mar 2011 14:18:19 +0200

meegotouchhome (0.23.16-1) unstable; urgency=low

  * Fixes: NB#238536 - Background apps won't close when switching between ACT-DEAD and user

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Tue, 22 Mar 2011 14:56:56 +0200

meegotouchhome (0.23.15-1) unstable; urgency=low

  * Fixes: NB#235408 - meegotouchhome fails to build with gcc-4.5 (-Werror)

 -- Vesa Halttunen <vesa.halttunen@nokia.comp>  Tue, 22 Mar 2011 10:56:51 +0200

meegotouchhome (0.23.14-1) unstable; urgency=low

  * Fixes: BMC#5009 - meegotouch-home points to an internal, vendor-specific bug tracker in its documentation

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Fri, 04 Mar 2011 12:47:19 +0200

meegotouchhome (0.23.13-1) unstable; urgency=low

  * Fixes: NB#233151 - homescreen is rotated 90 degrees

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Fri, 04 Mar 2011 12:46:47 +0200

meegotouchhome (0.23.12-1) unstable; urgency=low

  * Fixes: NB#226955 - Locked portrait mode breaks SDK environment

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Wed, 02 Mar 2011 17:35:25 +0200

meegotouchhome (0.23.11-1) unstable; urgency=low

  * Fixes: NB#230342 - _MEEGOTOUCH_VISIBLE_IN_SWITCHER not set

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Wed, 02 Mar 2011 14:46:57 +0200

meegotouchhome (0.23.10-1) unstable; urgency=low

  * Fixes: NB#222322 - [Harmmattan03-8]Ovi Store icon is missing after rebooting if user updated the ovi store client

 -- Eetu Lehmusvuo <ext-eetu.6.lehmusvuo@nokia.com>  Mon, 28 Feb 2011 14:14:17 +0200

meegotouchhome (0.23.9-1) unstable; urgency=low
