@@ -1,6 +1,7 @@
 meegotouchhome (0.23.18~1) unstable; urgency=low
 
   * [UNRELEASED]
+  * Fixes: NB#242046 - Wrong font in css (libmeegotouchhome)
 
  -- Juha Juutinen <juha.juutinen@ixonos.com>  Thu, 24 Mar 2011 14:59:14 +0200
 
